syntax = "proto3";

option csharp_namespace = "GrpcMicroservices.Protos";

import "google/protobuf/empty.proto";

package product;

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 quantity = 5;
}

message GetProductRequest {
  string id = 1;
}

message ProductListResponse {
  repeated Product products = 1;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 quantity = 4;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 quantity = 5;
}

service ProductProtoService {
  rpc GetProduct(GetProductRequest) returns (Product);
  rpc GetAllProducts(google.protobuf.Empty) returns (ProductListResponse);
  rpc CreateProduct(CreateProductRequest) returns (Product);
  rpc UpdateProduct(UpdateProductRequest) returns (Product);
  rpc DeleteProduct(GetProductRequest) returns (google.protobuf.Empty);
}
